wip: 04-spotiapp cosas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1 class="bg-rose-500 m-4 p-4">Inicio del proyecto</h1>
+<app-navbar class="max-[820px]:hidden m-o"></app-navbar>
+<app-navbar-mobile class="min-[820px]:hidden"></app-navbar-mobile>
+
+<div class="container mx-auto">
+  <router-outlet></router-outlet>
+</div>
