--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar class="max-[820px]:hidden m-o"></app-navbar>
 <app-navbar-mobile class="min-[820px]:hidden"></app-navbar-mobile>
 
-<div class="container mx-auto">
+<div class="container mx-auto mt-4">
   <router-outlet></router-outlet>
 </div>
