--- a/src/app/components/shared/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/components/shared/navbar-mobile/navbar-mobile.component.html
@@ -1,7 +1,12 @@
 <div>
   <mat-toolbar class="bg-slate-900 justify-between">
     <div class="flex items-center">
-      <img src="" alt="Avengers Icon" width="50" height="50" />
+      <img
+        src="assets/img/banner-ico.png"
+        alt="SpotiApp Icon"
+        width="50"
+        height="50"
+      />
     </div>
     <button
       mat-icon-button
@@ -10,47 +15,5 @@
     >
       <mat-icon class="text-white">menu</mat-icon>
     </button>
-  </mat-toolbar>
-
-  <mat-toolbar class="bg-slate-900 justify-between transition-opacity">
-    <div class="flex items-center">
-      <div routerLinkActive="active" class="rounded-lg">
-        <a
-          [routerLink]="['home']"
-          class="no-underline text-rose-500 p-2 rounded-lg"
-          >Home</a
-        >
-      </div>
-      <div routerLinkActive="active" class="rounded-lg">
-        <a
-          [routerLink]="['heroes']"
-          class="no-underline text-rose-500 p-2 rounded-lg"
-          >Heroes</a
-        >
-      </div>
-      <div routerLinkActive="active" class="rounded-lg">
-        <a
-          [routerLink]="['about']"
-          class="no-underline text-rose-500 p-2 rounded-lg"
-          >About</a
-        >
-      </div>
-    </div>
-    <div class="flex items-center">
-      <input
-        class="h-6 w-[120px] rounded"
-        type="text"
-        placeholder="Buscar Heroe"
-        #buscarTexto
-      />
-      <button
-        mat-icon-button
-        type="button"
-        class="example-icon hover:bg-slate-800 duration-500"
-        aria-label="Example icon-button with menu icon"
-      >
-        <mat-icon class="text-white">search</mat-icon>
-      </button>
-    </div>
   </mat-toolbar>
 </div>
