--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,10 @@
 <app-loading *ngIf="loading"></app-loading>
 
+<div *ngIf="error" class="bg-red-500 rounded-md p-4 animated fadeIn">
+  <h3 class="text-5xl">Error</h3>
+  <p>{{ mensajeError }}</p>
+</div>
+
 <div>
   <app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
 </div>
